Add rrrrrrrr to the footer

--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
     <header>
         <h1>Expedition</h1>
     </header>
+    <footer>
+        <!-- start of new content -->
+        <section>
+            <h3 class="visuallyhidden">Social Links</h3>
+           rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr
+        </section>
+        <!-- end of new content -->
+    </footer>
 </body>
 </html>
